Bug 12908 - crash in http/tests/incremental/frame-focus-before-load.html
Summary: crash in http/tests/incremental/frame-focus-before-load.html
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Misc. (show other bugs)
Version: 523.x (Safari 3)
Hardware: Mac OS X 10.4
: P1 Major
Assignee: Darin Adler
URL:
Keywords: Regression
Depends on:
Blocks:
 
Reported: 2007-02-27 05:33 PST by Darin Adler
Modified: 2007-02-27 06:23 PST (History)
0 users

See Also:


Attachments
add the missing null checks (1.46 KB, patch)
2007-02-27 05:35 PST, Darin Adler
mitz: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Darin Adler 2007-02-27 05:33:25 PST
http://trac.webkit.org/projects/webkit/changeset/19879 caused a crash in this test. I have a patch.
Comment 1 Darin Adler 2007-02-27 05:35:44 PST
Created attachment 13394 [details]
add the missing null checks
Comment 2 mitz 2007-02-27 05:43:45 PST
Comment on attachment 13394 [details]
add the missing null checks

Okay, but according to the style guidelines you need to use braces for the outer ifs.

r=me
Comment 3 Darin Adler 2007-02-27 06:23:10 PST
Committed revision 19884.