        Reviewed by Mitz.

- fix http://bugs.webkit.org/show_bug.cgi?id=12908
          crash in http/tests/incremental/frame-focus-before-load.html

        * page/mac/EventHandlerMac.mm: (WebCore::EventHandler::focusDocumentView):
        Add null checks.



Canonical link: https://commits.webkit.org/16721@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@19884 268f45cc-cd09-0410-ab3c-d52691b4dbfc